--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Lucida Sans';
 }
 #logo {
     font-family: garamond;
@@ -22,6 +23,32 @@
     padding: 10px;
     margin: 0 auto;
     margin-top: 40px;
+}
+#register_link{
+    position: absolute;
+    right: 5px;
+    bottom: 0px;
+    color: white;
+    background-color: #4388ff;
+    margin: 5px auto;
+    border: 0px;
+    border-radius: 5px;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    transition: all .1s ease-in-out;
+    text-decoration: none;
+    font-size: 14px;
+}
+#register_link:hover{
+    background-color: #2165da;
+}
+#register_link:active{
+    transform: scale(0.95,0.95);
+    background-color: #1349a7;
+}
+#login_form{
+    position: relative;
 }
 .text_type_input {
     width: 250px;
