--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'arial';
+}
 #logo_small {
     position: absolute;
     top: 5px;
@@ -13,8 +18,9 @@
     border-radius: 25px;
     text-align: center;
     padding-top: 10px;
+    cursor: pointer;
 }
-#messages_container{
+#messages_container {
     background-color: #e4e4e4;
     border-radius: 25px;
     width: 800px;
@@ -23,7 +29,29 @@
     padding: 10px;
     min-height: 600px;
 }
-.message{
+#chat_container {
+    width: 820px;
+    overflow-y: scroll;
+    padding: 15px;
+    margin-top: 50px;
+}
+#no_scrollbar_wrap {
+    width: 800px;
+    margin: 0 auto;
+    overflow-x: hidden;
+}
+#footer {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    height: 20px;
+    font-family: monospace;
+    background-color: #e6e6e6;
+    color: #999999;
+    font-size: 15px;
+    text-align: center;
+}
+.message {
     font-family: arial;
     background-color: white;
     border-radius: 10px;
@@ -33,24 +61,50 @@
     margin: 10px auto;
     transition: all .1s ease-in-out; 
 }
-.message:hover{
+.message:hover {
     background-color: #daeafd;
 }
-.message:active{
+.message:active {
     transform: scale(0.97,0.97);
 }
-.username{
+.chat_message_wrap {
+    width: 760px;
+    padding: 15px;
+}
+.chat_message {
+    position: relative;
+    color: white;
+    background-color: dodgerblue;
+    border-radius: 25px;
+    width: 350px;
+    padding: 10px;
+}
+.direction_out {
+    margin-left: 400px;
+    text-align: right;
+}
+.direction_in {
+    text-align: left;
+}
+.date_container {
+    position: absolute;
+    font-size: x-small;
+    bottom: -15px;
+    right: 5px;
+    color: #999999;
+}
+.username {
     color: dodgerblue;
     position: absolute;
     top: 5px;
     left: 10px;
 }
-.content{
+.content {
     position: absolute;
     bottom: 5px;
     left: 10px;
 }
-.time{
+.time {
     color:gray;
     font-size: x-small;
     position: absolute;
