--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-    <h1 id="logo_small">:)</h1>
+    <h1 id="logo_small" onclick="location.href='/';">:)</h1>
     {{{body}}}
+    <div id="footer">Piotr Kmieć 2022</div>
 </body>
 </html>
