--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -9,4 +9,7 @@
         </div>
         {{/each}}
     </div>
+    <div id="sender_conainer">
+        <textarea type="text" id="message_input" rows="3"></textarea>
+    </div>
 </div>
