--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,5 +11,7 @@
     <h1 id="logo_small" onclick="location.href='/';">:)</h1>
     {{{body}}}
     <div id="footer">Piotr Kmieć 2022</div>
+
+    <script src="scripts/main.js"></script>
 </body>
 </html>
