authenticated socket sessions for new message transmission to server

--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -13,3 +13,5 @@
         <textarea type="text" id="message_input" rows="3"></textarea>
     </div>
 </div>
+
+<script type="module" src="scripts/main.js"></script>
