--- a/static/styles/authentication.css
+++ b/static/styles/authentication.css
@@ -88,8 +88,8 @@
     bottom: 0;
     height: 20px;
     font-family: monospace;
-    background-color: #e6e6e6;
-    color: #999999;
+    background-color: #80afff;
+    color: white;
     font-size: 15px;
     text-align: center;
 }
