--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -14,4 +14,4 @@
     </div>
 </div>
 
-<script type="module" src="scripts/main.js"></script>
+<script type="module" src="scripts/chat.js"></script>
