--- a/views/messages.hbs
+++ b/views/messages.hbs
@@ -6,4 +6,10 @@
         <div class="time">{{this.time}}</div>
     </div>
     {{/each}}
+    <form id="new_conversation_form" method="GET" action="/chat">
+        <p>Message new user</p>
+        <input type="text" name="user">
+    </div>
 </div>
+
+<script type="module" src="scripts/messages.js"></script>
