--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1 id="logo_small" onclick="location.href='/';">:)</h1>
+    <div id="user_menu">
+        <span id="username">{{name}}</span>
+        <a href="/logout">Log out</a>
+    </div>
     {{{body}}}
     <div id="footer">Piotr Kmieć 2022</div>
 </body>
