--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,175 +1,268 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: "arial";
+*
+{
+	font-family:arial;
+	margin:0;
+	padding:0;
 }
-.chat_message {
-    position: relative;
-    color: white;
-    background-color: dodgerblue;
-    border-radius: 25px;
-    width: 350px;
-    padding: 10px;
+
+.chat_message
+{
+	background-color:#1E90FF;
+	border-radius:25px;
+	color:#FFF;
+	padding:10px;
+	position:relative;
+	width:350px;
 }
-.chat_message_wrap {
-    width: 760px;
-    padding: 15px;
+
+.chat_message_wrap
+{
+	padding:15px;
+	width:760px;
 }
-.content {
-    position: absolute;
-    bottom: 5px;
-    left: 10px;
+
+.content
+{
+	bottom:5px;
+	left:10px;
+	position:absolute;
 }
-.date_container {
-    position: absolute;
-    font-size: x-small;
-    bottom: -15px;
-    right: 5px;
-    color: #999999;
+
+.date_container
+{
+	bottom:-15px;
+	color:#999;
+	font-size:x-small;
+	position:absolute;
+	right:5px;
 }
-.direction_in {
-    text-align: left;
+
+.direction_in
+{
+	text-align:left;
 }
-.direction_out {
-    margin-left: 400px;
-    text-align: right;
+
+.direction_out
+{
+	margin-left:400px;
+	text-align:right;
 }
-.message {
-    font-family: arial;
-    background-color: white;
-    border-radius: 10px;
-    width: 300px;
-    height: 50px;
-    position: relative;
-    margin: 10px auto;
-    transition: all .1s ease-in-out; 
+
+.error_message
+{
+	color:#942525;
+	display:block;
+	font-size:large;
+	margin:0 auto;
+	text-align:center;
+	width:600px;
 }
-.message:active {
-    transform: scale(0.97,0.97);
+
+.message
+{
+	background-color:#FFF;
+	border-radius:10px;
+	font-family:arial;
+	height:50px;
+	margin:10px auto;
+	position:relative;
+	transition:all .1s ease-in-out;
+	width:300px;
 }
-.message:hover {
-    background-color: #daeafd;
+
+.message:active
+{
+	transform:scale(0.97,0.97);
 }
-.time {
-    color:gray;
-    font-size: x-small;
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    width: 80px;
-    text-align: right;
+
+.message:hover
+{
+	background-color:#daeafd;
 }
-.username {
-    color: dodgerblue;
-    position: absolute;
-    top: 5px;
-    left: 10px;
+
+.time
+{
+	color:gray;
+	font-size:x-small;
+	position:absolute;
+	right:5px;
+	text-align:right;
+	top:5px;
+	width:80px;
 }
-#chat_container {
-    width: 820px;
-    overflow-y: scroll;
-    padding: 15px;
-    margin-top: 0px;
-    height: 80vh;
-    display: flex;
-    flex-direction: column-reverse;
+
+.username
+{
+	color:#1E90FF;
+	left:10px;
+	position:absolute;
+	top:5px;
 }
-#footer {
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    height: 20px;
-    font-family: monospace;
-    background-color: #80afff;
-    color: white;
-    font-size: 15px;
-    text-align: center;
+
+#chat_container
+{
+	display:flex;
+	flex-direction:column-reverse;
+	height:80vh;
+	margin-top:0;
+	overflow-y:scroll;
+	padding:15px;
+	width:820px;
 }
-#logo_small {
-    position: absolute;
-    top: 5px;
-    left: 20px;
-    font-family: garamond;
-    color: #1552bd;
-    font-size: 50px;
-    width: 50px;
-    height: 50px;
-    margin: 0 auto;
-    transform: rotate(90deg);
-    padding: 15px;
-    border-radius: 25px;
-    text-align: center;
-    padding-top: 10px;
-    cursor: pointer;
+
+#footer
+{
+	background-color:#80afff;
+	bottom:0;
+	color:#FFF;
+	font-family:monospace;
+	font-size:15px;
+	height:20px;
+	position:absolute;
+	text-align:center;
+	width:100%;
 }
-#message_input:focus{
-    outline: none;
+
+#logo_small
+{
+	border-radius:25px;
+	color:#1552bd;
+	cursor:pointer;
+	font-family:garamond;
+	font-size:50px;
+	height:50px;
+	left:20px;
+	margin:0 auto;
+	padding:10px 15px 15px;
+	position:absolute;
+	text-align:center;
+	top:5px;
+	transform:rotate(90deg);
+	width:50px;
 }
-#message_input{
-    background-color: aliceblue;
-    color: dodgerblue;
-    width: 750px;
-    border: 0;
-    border-radius: 10px;
-    height: calc(10vh - 10px);
-    padding: 10px;
-    margin: 0 auto;
-    margin-left: 25px;
-    font-size: large;
-    resize: none;
-    overflow: hidden;
+
+#message_input
+{
+	background-color:#F0F8FF;
+	border:0;
+	border-radius:10px;
+	color:#1E90FF;
+	font-size:large;
+	height:calc(10vh-10px);
+	margin:0 auto 0 25px;
+	overflow:hidden;
+	padding:10px;
+	resize:none;
+	width:750px;
 }
-#messages_container {
-    background-color: #e4e4e4;
-    border-radius: 25px;
-    width: 800px;
-    margin: 0 auto;
-    margin-top: 90px;
-    padding: 10px;
-    min-height: 600px;
+
+#messages_container
+{
+	background-color:#e4e4e4;
+	border-radius:25px;
+	margin:90px auto 0;
+	min-height:600px;
+	padding:10px;
+	width:800px;
 }
-#no_scrollbar_wrap {
-    width: 800px;
-    margin: 0 auto;
-    overflow-x: hidden;
+
+#new_conversation_form
+{
+	background-color:#1552bd;
+	border-radius:10px;
+	font-family:arial;
+	margin:10px auto;
+	position:relative;
+	transition:all .1s ease-in-out;
+	width:300px;
 }
-#sender_container {
-    display: block;
-    height: 10vh;
-    width: 800px;
-    margin: 0 auto;
+
+#new_conversation_form>input
+{
+	background-color:#f4f4f4;
+	border:0;
+	border-radius:10px;
+	color:#1552bd;
+	font-size:large;
+	height:30px;
+	margin:10px;
+	text-align:center;
+	transition:.1s ease-in-out;
+	width:280px;
 }
-#new_conversation_form {
-    font-family: arial;
-    background-color: #1552bd;
-    border-radius: 10px;
-    width: 300px;
-    position: relative;
-    margin: 10px auto;
-    transition: all .1s ease-in-out; 
+
+#new_conversation_form>input:active
+{
+	transform:scale(0.98,0.98);
 }
-#new_conversation_form>input {
-    width: 280px;
-    background-color: #f4f4f4;
-    color:#1552bd;
-    height: 30px;
-    font-size: large;
-    border: 0;
-    border-radius: 10px;
-    margin: 10px;
-    transition: .1s ease-in-out;
+
+#new_conversation_form>input:hover
+{
+	background-color:#FFF;
 }
-#new_conversation_form>input:focus{
-    outline: none;
+
+#new_conversation_form>p
+{
+	color:#FFF;
+	padding-top:5px;
+	text-align:center;
 }
-#new_conversation_form>input:active{
-    transform: scale(0.98, 0.98);
+
+#no_scrollbar_wrap
+{
+	margin:0 auto;
+	overflow-x:hidden;
+	width:800px;
 }
-#new_conversation_form>input:hover{
-    background-color: white;
+
+#sender_container
+{
+	display:block;
+	height:10vh;
+	margin:0 auto;
+	width:800px;
 }
-#new_conversation_form>p {
-    color: white;
-    text-align: center;
-    padding-top: 5px;
+
+#user_menu
+{
+	background-color:#1552bd;
+	border-radius:10px;
+	color:#FFF;
+	display:block;
+	font-size:large;
+	padding:10px;
+	position:absolute;
+	right:20px;
+	text-align:center;
+	top:20px;
+}
+
+#user_menu>a
+{
+	background-color:#FFF;
+	border-radius:10px;
+	color:#1E90FF;
+	display:block;
+	font-size:medium;
+	margin-top:15px;
+	padding:5px;
+	text-decoration:none;
+	transition:all .1s ease-in-out;
+}
+
+#user_menu>a:active
+{
+	background-color:#2868d8;
+	transform:scale(0.95,0.95);
+}
+
+#user_menu>a:hover
+{
+	background-color:#1E90FF;
+	color:#FFF;
+}
+
+#message_input:focus,#new_conversation_form>input:focus
+{
+	outline:none;
 }
