--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-    <h1 id="logo_small" onclick="location.href='/';">:)</h1>
-    <div id="user_menu">
-        <span id="username">{{name}}</span>
-        <a href="/logout">Log out</a>
+    <div id="page_wrap">
+        <h1 id="logo_small" onclick="location.href='/';">:)</h1>
+        <div id="user_menu">
+            <span id="username">{{name}}</span>
+            <a href="/logout">Log out</a>
+        </div>
+        {{{body}}}
+        <div id="footer">Piotr Kmieć 2022</div>
     </div>
-    {{{body}}}
-    <div id="footer">Piotr Kmieć 2022</div>
 </body>
 </html>
