added e2e login and register test

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,6 @@
 <form id="signup_signin_form" method="post" action="/log">
-    <input type="text" name="username" placeholder="Login" class="text_type_input"/>
-    <input type="password" name="password" placeholder="Pass" class="text_type_input"/>
+    <input type="text" name="username" placeholder="Username" class="text_type_input"/>
+    <input type="password" name="password" placeholder="Password" class="text_type_input"/>
     <input type="submit" value=" Log in " class="button_type_input"/>
-    <a href="/register" id="signup_signin_link">Join</a>
+    <a href="/register" id="signup_signin_link">Register</a>
 </form>
