--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,7 +1,7 @@
 <span class="form_label"></span>
 <form id="signup_signin_form" method="post" action="/new_user">
-    <input type="text" name="username" placeholder="Login" class="text_type_input"/>
-    <input type="password" name="password" placeholder="Pass" class="text_type_input"/>
+    <input type="text" name="username" placeholder="Your new username" class="text_type_input"/>
+    <input type="password" name="password" placeholder="Password" class="text_type_input"/>
     <input type="submit" value=" Sign Up " class="button_type_input"/>
     <a href="/" id="signup_signin_link">Log in</a>
 </form>
