implemented donate button with Stripe

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,6 +15,7 @@
             <a href="/logout">Log out</a>
         </div>
         {{{body}}}
+        <div id="donate_button">Donate</div>
         <div id="footer">Piotr Kmieć 2022</div>
     </div>
 </body>
