--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -272,3 +272,30 @@
 	background-color:#1E90FF;
 	color:#FFF;
 }
+
+#donate_button
+{
+	background-color:#4388ff;
+	border:0;
+	border-radius:5px;
+	bottom:25px;
+	color:#FFF;
+	font-size:14px;
+	margin:5px auto;
+	padding:5px 10px;
+	position:absolute;
+	right:15px;
+	text-decoration:none;
+	transition:all .1s ease-in-out;
+}
+
+#donate_button:active
+{
+	background-color:#1349a7;
+	transform:scale(0.95,0.95);
+}
+
+#donate_button:hover
+{
+	background-color:#2165da;
+}
